force-app/main/default/objects/Collateral_Association__c/Collateral_Association__c.object-meta.xml
<CustomObject>
    <label>Collateral Association</label>
    <pluralLabel>Collateral Associations</pluralLabel>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Collateral Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Links Collateral to Accounts or Financial Accounts (association/pledge relationship)</description>
</CustomObject>