force-app/main/default/objects/Collateral_Association__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collateral Associations</relationshipLabel>
    <relationshipName>Collateral_Associations</relationshipName>
    <type>Lookup</type>
    <description>Account associated with this collateral</description>
</CustomField>