force-app/main/default/objects/Collateral_Association__c/fields/Association_Type__c.field-meta.xml
<CustomField>
    <fullName>Association_Type__c</fullName>
    <label>Association Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Cross-Collateral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of collateral association</description>
</CustomField>